--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.3.0",
     "axios": "^1.3.4",
+    "colormap": "^2.3.2",
     "echarts": "^5.4.1",
     "history": "^5.3.0",
     "mobx": "^6.8.0",
